- updated the WorkSchedule page to be more presentable and have explanatory text, updated toaster text - tweaked text on ManageMunicipalities to match the changes to WorkSchedule Files modified - [ManageMunicipalities.html,MyProfile.variables.json,WorkSchedule.variables.json,WorkSchedule.html]

--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -60,8 +60,8 @@
                                                 <wm-gridcolumn columnwidth="6" name="gridcolumn8_1"></wm-gridcolumn>
                                             </wm-gridrow>
                                             <wm-gridrow name="gridrow4_1">
-                                                <wm-gridcolumn columnwidth="12" name="gridcolumn8_1">
-                                                    <wm-label padding="unset 0.5em" name="label3_1" caption="Other Municipality Settings (Municipality Details, Global Email Signature, Municipality Logo, Operating Hours, and Work Holidays) are controlled on the &quot;Municipality Setings&quot; and &quot;Work Schedule&quot; pages accessible via the Municipality Administration dashboard."></wm-label>
+                                                <wm-gridcolumn columnwidth="12" name="gridcolumn8_1" padding="2em unset 1em unset">
+                                                    <wm-label padding="unset 0.5em" name="label3_1" caption="Additional settings (Municipality Details, Global Email Signature, Municipality Logo, Scheduling Settings, and Work Holidays) are controlled on the &quot;Municipality Setings&quot; and &quot;Work Schedule&quot; pages accessible via the Municipality Administration dashboard."></wm-label>
                                                 </wm-gridcolumn>
                                             </wm-gridrow>
                                         </wm-layoutgrid>
